updates to index notes

--- a/app/views/psd-revised-flow/indexxx.html
+++ b/app/views/psd-revised-flow/indexxx.html
@@ -198,7 +198,7 @@
             </li> 
             <li>
                 <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/case-trading-stds-landing_warnings.html" target="_blank">Case page - warning</a>
-                <br><span class="govuk-!-font-size-16">Nothing added yet. Warns that no products, businesses, or assessments have been added. (Warning text and minor label in the Case specific product information section)</span>.
+                <br><span class="govuk-!-font-size-16">Nothing added yet. <!--Warns that no products, businesses, or assessments have been added. -->(Warning text and minor label in the Case specific product information section)</span>.
             </li>
             <li>
                 <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/case-trading-stds-landing-case-specific-x2.html" target="_blank">Case page - Case specific product information</a> - showing two products
@@ -565,10 +565,10 @@
                 <br><span class="govuk-!-font-size-16">My team owns this product record (and we have at least one case linked to it)</span>.
 
                 <ul class="govuk-list govuk-list--bullet govuk-list--spaced small-links margin-left">
-                    <li>
+                    <!--li>
                         <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/product-page-no-owner" target="_blank">Product page - not owned (but is included in any of my team's cases)</a>
                         <br><span class="govuk-!-font-size-16">No team owns the product record but my team have an open case linked to it</span>.
-                    </li>
+                    </li-->
                     <li>
                         <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/product-page-no-owner-not-included" target="_blank">Product page - not owned (and not included in any of my team's cases)</a>
                         <br><span class="govuk-!-font-size-16">No team owns the product record and my team <b>do not</b> have a case linked to it</span>.
