--- a/app/views/psd-revised-flow/supporting-information-empty.html
+++ b/app/views/psd-revised-flow/supporting-information-empty.html
@@ -158,7 +158,66 @@
             </div>            
         </section>
 
-        <section id="correspondence" class="govuk-!-margin-bottom-9 govuk-!-padding-right-4 govuk-!-padding-left-4 govuk-!-padding-top-4 opss-border-all" data-info-number="0">
+        <section class="govuk-!-margin-bottom-9 govuk-!-padding-right-4 govuk-!-padding-left-4 govuk-!-padding-top-4 opss-border-all" data-info-number="2" id="correspondence">
+            <div class="govuk-grid-row">
+                <div class="govuk-grid-column-three-quarters">
+                    <h3 class="govuk-heading-m">
+                        Correspondence
+                        <span class="govuk-!-font-weight-regular govuk-!-font-size-24">(2)</span>
+                    </h3>
+                </div>
+                  <div class="govuk-grid-column-one-quarter">
+                      <div class="opss-text-align-right opss-margin-bottom-1-desktop">
+                          <a class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-underline-offset" href="/cases/2206-0012/correspondence/new">
+                            Add <span class="govuk-visually-hidden">Correspondence</span>
+        </a>              </div>
+                  </div>
+            </div>
+              <ul class="govuk-list">
+                <li>
+                    <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt">
+                        <div class="govuk-summary-list__row">
+                          <dt class="govuk-summary-list__key">Type</dt>
+                          <dd class="govuk-summary-list__value">Email</dd>
+                        </div>
+                        <div class="govuk-summary-list__row">
+                          <dt class="govuk-summary-list__key">Title</dt>
+                          <dd class="govuk-summary-list__value"><a class="govuk-link govuk-link--no-visited-state" href="/cases/2206-0012/emails/13">fdsafddas</a></dd>
+                        </div>
+                        <div class="govuk-summary-list__row">
+                          <dt class="govuk-summary-list__key">Event date</dt>
+                          <dd class="govuk-summary-list__value">1 February 2009</dd>
+                        </div>
+                        <div class="govuk-summary-list__row">
+                          <dt class="govuk-summary-list__key">Added</dt>
+                          <dd class="govuk-summary-list__value">22 June 2022</dd>
+                        </div>
+                    </dl>
+                </li>
+                <li>
+                    <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt">
+                        <div class="govuk-summary-list__row">
+                          <dt class="govuk-summary-list__key">Type</dt>
+                          <dd class="govuk-summary-list__value">Telephone</dd>
+                        </div>
+                        <div class="govuk-summary-list__row">
+                          <dt class="govuk-summary-list__key">Title</dt>
+                          <dd class="govuk-summary-list__value"><a class="govuk-link govuk-link--no-visited-state" href="/cases/2206-0012/phone-calls/12">good call</a></dd>
+                        </div>
+                        <div class="govuk-summary-list__row">
+                          <dt class="govuk-summary-list__key">Event date</dt>
+                          <dd class="govuk-summary-list__value">1 January 2007</dd>
+                        </div>
+                        <div class="govuk-summary-list__row">
+                          <dt class="govuk-summary-list__key">Added</dt>
+                          <dd class="govuk-summary-list__value">22 June 2022</dd>
+                        </div>
+                    </dl>
+                </li>
+              </ul>
+        </section>        
+
+        <!--section id="correspondence" class="govuk-!-margin-bottom-9 govuk-!-padding-right-4 govuk-!-padding-left-4 govuk-!-padding-top-4 opss-border-all" data-info-number="0">
             <div class="govuk-grid-row">
                 <div class="govuk-grid-column-three-quarters">
                     <h3 class="govuk-heading-m">
@@ -173,7 +232,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section-->
 
         <section id="testresult" class="govuk-!-margin-bottom-9 govuk-!-padding-right-4 govuk-!-padding-left-4" data-info-number="0">
             <div class="govuk-grid-row">
