--- a/app/views/psd-revised-flow/businesses-empty.html
+++ b/app/views/psd-revised-flow/businesses-empty.html
@@ -12,7 +12,7 @@
         <div class="govuk-grid-row">
             <div class="govuk-grid-column-three-quarters opss-desktop-min-height--s">
                 <span class="govuk-caption-m">Allegation 2101-0008 </span>
-                <h1 class="govuk-heading-l">
+                <h1 class="govuk-heading-l govuk-!-margin-bottom-3">
                     Businesses
                 </h1>
 
