New reg office pages

--- a/app/views/psd-revised-flow/create-a-product-record-add.html
+++ b/app/views/psd-revised-flow/create-a-product-record-add.html
@@ -171,8 +171,11 @@
     </div>
   
     <div class="govuk-grid-row">
-        <div class="govuk-grid-column-two-thirds">
-            <aside class="govuk-!-padding-4 govuk-!-margin-bottom-6 opss-border-all opss-rounded-corners" style>
+        <div class="govuk-grid-column-full">
+            <aside class="govuk-!-padding-3 govuk-!-margin-top-5 govuk-!-margin-bottom-9 opss-border-all opss-rounded-corners opss-drop-shadow">
+              <h3 class="govuk-heading-s govuk-!-margin-bottom-1 opss-secondary-text">
+                Number of units affected?
+              </h3>
                 <p class="govuk-body-s govuk-!-margin-0 opss-secondary-text">
                     The number of units affected is case related data (and has now moved to the case page). 
                 </p>
@@ -256,15 +259,19 @@
     <input aria-describedby="barcode-hint" class="govuk-input app-!-max-width-one-half" id="barcode" name="product[barcode]" type="text" />
   </div>
 
-    <div class="govuk-grid-row">
-        <div class="govuk-grid-column-two-thirds">
-            <aside class="govuk-!-padding-4 govuk-!-margin-bottom-6 opss-border-all opss-rounded-corners" style>
-                <p class="govuk-body-s govuk-!-margin-0 opss-secondary-text">
-                    Batch numbers are case related data (and have now moved to the case page). 
-                </p>
-            </aside>
-        </div>
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-full">
+        <aside class="govuk-!-padding-3 govuk-!-margin-top-5 govuk-!-margin-bottom-9 opss-border-all opss-rounded-corners opss-drop-shadow">
+          <h3 class="govuk-heading-s govuk-!-margin-bottom-1 opss-secondary-text">
+            Batch numbers
+          </h3>
+            <p class="govuk-body-s govuk-!-margin-0 opss-secondary-text">
+              Batch numbers are case related data (and have now moved to the case page). 
+            </p>
+        </aside>
     </div>
+  </div>   
+
 
   <!--div class="govuk-form-group">
     <label class="govuk-label govuk-label--m" for="product_batch_number">Batch number</label>
@@ -572,15 +579,19 @@
     </div>
 
     <div class="govuk-grid-row">
-        <div class="govuk-grid-column-two-thirds">
-            <aside class="govuk-!-padding-4 govuk-!-margin-bottom-6 opss-border-all opss-rounded-corners" style>
-                <p class="govuk-body-s govuk-!-margin-0 opss-secondary-text">
-                    Customs codes are case related data (and have now moved to the case page). 
-                </p>
-            </aside>
-        </div>
-    </div>    
+      <div class="govuk-grid-column-full">
+          <aside class="govuk-!-padding-3 govuk-!-margin-top-5 govuk-!-margin-bottom-9 opss-border-all opss-rounded-corners opss-drop-shadow">
+            <h3 class="govuk-heading-s govuk-!-margin-bottom-1 opss-secondary-text">
+              Customs codes
+            </h3>
+              <p class="govuk-body-s govuk-!-margin-0 opss-secondary-text">
+                Customs codes are case related data (and have now moved to the case page). 
+              </p>
+          </aside>
+      </div>
+    </div>   
   
+
     <!--div class="govuk-form-group">
     <label class="govuk-label govuk-label--m" for="product_customs_code">Customs code</label>
     <div class="govuk-hint " id="product_customs_code-hint">For example, CN code (8 digits) or TARIC code (10 digits). Use a comma to separate multiple codes</div>
