--- a/app/views/psd-revised-flow/create-a-product-record-edit.html
+++ b/app/views/psd-revised-flow/create-a-product-record-edit.html
@@ -167,16 +167,19 @@
             </div>
         </fieldset>
     </div>
-  
+    
     <div class="govuk-grid-row">
-        <div class="govuk-grid-column-two-thirds">
-            <aside class="govuk-!-padding-4 govuk-!-margin-bottom-6 opss-border-all opss-rounded-corners" style>
-                <p class="govuk-body-s govuk-!-margin-0 opss-secondary-text">
-                    The number of units affected is case related data (and has now moved to the case page). 
-                </p>
-            </aside>
-        </div>
-    </div>     
+      <div class="govuk-grid-column-full">
+          <aside class="govuk-!-padding-3 govuk-!-margin-top-5 govuk-!-margin-bottom-9 opss-border-all opss-rounded-corners opss-drop-shadow">
+            <h3 class="govuk-heading-s govuk-!-margin-bottom-1 opss-secondary-text">
+              Number of units affected?
+            </h3>
+              <p class="govuk-body-s govuk-!-margin-0 opss-secondary-text">
+                The number of units affected is case related data (and has now moved to the case page). 
+              </p>
+          </aside>
+      </div>
+    </div>    
   
   <!--div class="govuk-form-group">
     <fieldset class="govuk-fieldset">
