--- a/app/views/psd-revised-flow/indexxx.html
+++ b/app/views/psd-revised-flow/indexxx.html
@@ -34,6 +34,9 @@
     .ghost {
         color: #999 !important;
     }
+    .highlight {
+        background-color: aquamarine;
+    }
 </style>
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
@@ -393,10 +396,10 @@
                     <li>
                         In the new Supporting information page we use the new label "Event date". Every instance throughout the related add and edit pages for various informations we change "Date of action" to "Event date" (and we may add hint text: For example, when was a document issued.)
                     </li>                    
-                    <li>
-                        On the current 'Add comment' form we need to add a Hint text advising the user that the comment will only appear within the Activity timeline (as is the current behaviour).
+                    <li class="highlight">
+                        On the current 'Add comment' form we need to add a Hint text advising the user that the comment will only appear within the Activity timeline (as is the current behaviour). "Comments appear within the activity timeline."
                     </li>
-                    <li>
+                    <li class="highlight">
                         <span class="govuk-!-font-size-16">
                             Note: error messages not working correctly (summary links) on Correspondence form page and Test results form page.
                         </span>
