--- a/app/assets/sass/opss/_opss-shared.scss
+++ b/app/assets/sass/opss/_opss-shared.scss
@@ -189,9 +189,6 @@ body.js-enabled .opss-nojs-hide {
 .opss-grey-bg {
     background-color: govuk-colour("light-grey");
 }
-.opss-rounded-corners {
-     border-radius: 5px;
-}
 .opss-document-icon-std {    /*   A CSS FOR ICON ON MOBILE - REQUIRES DESKTOP ONLY CSS TO SNAP IN FULL SIZE DIMS. And update HTML to figcaption   */
     position: relative;
     padding: 2px;
@@ -521,9 +518,12 @@ ul.opss-left-nav {
 .opss-border-bottom {border-bottom-width: 1px; }
 .opss-border-left {border-left-width: 1px; }
 .opss-border-right {border-right-width: 1px; }
-.opss-border-all {border-width: 1px; }
 .opss-border-none {border-width: 0; }
-
+@include govuk-media-query($from: tablet) {
+    .opss-border-all {border-width: 1px; }
+    .opss-rounded-corners {border-radius: 5px; }
+    .opss-drop-shadow {box-shadow: 3px 4px 6px 0px #ebebeb; }//2px 2px 10px govuk-colour("mid-grey");
+}
 .opss-details--sm {
     @include govuk-media-query($from: desktop) {
         summary {
