--- a/app/views/psd-revised-flow/create-a-product-record-add.html
+++ b/app/views/psd-revised-flow/create-a-product-record-add.html
@@ -40,9 +40,15 @@
   
   <div class="govuk-form-group app-!-autocomplete--max-width-three-quarters">
     <label class="govuk-label govuk-label--m" for="category">Product category</label>
+
     <!--div class="govuk-hint " id="category-hint">COVID-19 categories added: ‘PPE’ and ‘Hand sanitiser’</div-->
+
+    <div class="govuk-hint govuk-!-font-size-16" id="category-hint">
+      The product category will be permanent for this product record
+    </div>
+
     <div class="autocomplete-select-with-clear">
-    <select class="govuk-select " id="category" name="product[category]"><!-- removed: aria-describedby="category-hint"  -->
+    <select class="govuk-select " id="category" name="product[category]" aria-describedby="category-hint">
     <option selected="">
     </option>
     <option value="Personal protective equipment (PPE)">Personal protective equipment (PPE)</option>
@@ -104,11 +110,11 @@
     </div>
   
   <div class="govuk-form-group">
-    <fieldset class="govuk-fieldset">
+    <fieldset class="govuk-fieldset" aria-describedby="counterfeit-hint">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Is the product counterfeit?</legend>
 
-    <div class="govuk-hint govuk-!-font-size-16">
-      The counterfeit status will be permanent for this product record. You can create the product record later, or create an alternative product record when required.
+    <div class="govuk-hint govuk-!-font-size-16" id="counterfeit-hint">
+      The counterfeit status will be permanent for this product record. You can create the product record later, or create an alternative product record when required
     </div>
 
     <div class="govuk-radios">
@@ -222,14 +228,24 @@
   
   <div class="govuk-form-group">
     <label class="govuk-label govuk-label--m" for="product_brand">Manufacturer's brand name</label>
-    <div class="govuk-hint " id="product_brand-hint">For example, ‘Dyson’ or ‘Sony’</div>
+
+    <div class="govuk-hint" id="product_brand-hint">
+      For example, Dyson or Sony<span class="govuk-visually-hidden">.</span>
+      <br><span class="govuk-!-font-size-16">The manufacturer's brand name will be permanent for this product record</span>
+    </div>
+
     <input aria-describedby="product_brand-hint" class="govuk-input app-!-max-width-one-half" id="product_brand" name="product[brand]" type="text" value="" />
     </div>
   
   
   <div class="govuk-form-group">
     <label class="govuk-label govuk-label--m" for="name">Product name</label>
-    <div class="govuk-hint " id="name-hint">Include model name and model number, for example ‘PlayStation 5’</div>
+
+    <div class="govuk-hint" id="name-hint">
+      Include model name and model number, for example 'PlayStation 5'<span class="govuk-visually-hidden">.</span>
+      <br><span class="govuk-!-font-size-16">The product name will be permanent for this product record</span>
+    </div> 
+
     <input aria-describedby="name-hint" class="govuk-input app-!-max-width-three-quarters" id="name" name="product[name]" type="text" value="" />
     </div>
   
