--- a/app/views/psd-revised-flow/create-a-product-record-edit.html
+++ b/app/views/psd-revised-flow/create-a-product-record-edit.html
@@ -38,9 +38,15 @@
   
   <div class="govuk-form-group app-!-autocomplete--max-width-three-quarters">
     <label class="govuk-label govuk-label--m" for="category">Product category</label>
+
     <!--div class="govuk-hint " id="category-hint">COVID-19 categories added: ‘PPE’ and ‘Hand sanitiser’</div-->
+
+    <div class="govuk-hint govuk-!-font-size-16" id="category-hint">
+      The product category will be permanent for this product record
+    </div>
+
     <div class="autocomplete-select-with-clear">
-    <select class="govuk-select " id="category" name="product[category]"><!-- removed: aria-describedby="category-hint"  -->
+    <select class="govuk-select " id="category" name="product[category]" aria-describedby="category-hint" aria-disabled="true" disabled>
     <option>
     </option>
     <option value="Personal protective equipment (PPE)">Personal protective equipment (PPE)</option>
@@ -102,11 +108,11 @@
     </div>
   
   <div class="govuk-form-group">
-    <fieldset class="govuk-fieldset">
+    <fieldset class="govuk-fieldset" aria-describedby="counterfeit-hint">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Is the product counterfeit?</legend>
 
-      <div class="govuk-hint govuk-!-font-size-16">
-        The counterfeit status will is permanent for this product record. You can create an alternative product record if required.
+      <div class="govuk-hint govuk-!-font-size-16" id="counterfeit-hint">
+        The counterfeit status will be permanent for this product record. You can create an alternative product record if required
       </div>
 
     <div class="govuk-radios">
@@ -220,15 +226,25 @@
   
   <div class="govuk-form-group">
     <label class="govuk-label govuk-label--m" for="product_brand">Manufacturer's brand name</label>
-    <div class="govuk-hint " id="product_brand-hint">For example, ‘Dyson’ or ‘Sony’</div>
-    <input aria-describedby="product_brand-hint" class="govuk-input app-!-max-width-one-half" id="product_brand" name="product[brand]" type="text" value="Tesco" />
+
+    <div class="govuk-hint" id="product_brand-hint">
+      For example, Dyson or Sony<span class="govuk-visually-hidden">.</span>
+      <br><span class="govuk-!-font-size-16">The manufacturer's brand name will be permanent for this product record</span>
+    </div>
+
+    <input aria-describedby="product_brand-hint" class="govuk-input app-!-max-width-one-half" id="product_brand" name="product[brand]" type="text" value="Tesco" aria-disabled="true" disabled />
     </div>
   
   
   <div class="govuk-form-group">
     <label class="govuk-label govuk-label--m" for="name">Product name</label>
-    <div class="govuk-hint " id="name-hint">Include model name and model number, for example ‘PlayStation 5’</div>
-    <input aria-describedby="name-hint" class="govuk-input app-!-max-width-three-quarters" id="name" name="product[name]" type="text" value="Boots hand cream" />
+
+    <div class="govuk-hint" id="name-hint">
+      Include model name and model number, for example 'PlayStation 5'<span class="govuk-visually-hidden">.</span>
+      <br><span class="govuk-!-font-size-16">The product name will be permanent for this product record</span>
+    </div>    
+
+    <input aria-describedby="name-hint" class="govuk-input app-!-max-width-three-quarters" id="name" name="product[name]" type="text" value="Boots hand cream" aria-disabled="true" disabled />
     </div>
   
   <div class="govuk-form-group">
@@ -257,15 +273,18 @@
     <input aria-describedby="barcode-hint" class="govuk-input app-!-max-width-one-half" id="barcode" name="product[barcode]" type="text" />
   </div>
 
-    <div class="govuk-grid-row">
-        <div class="govuk-grid-column-two-thirds">
-            <aside class="govuk-!-padding-4 govuk-!-margin-bottom-6 opss-border-all opss-rounded-corners" style>
-                <p class="govuk-body-s govuk-!-margin-0 opss-secondary-text">
-                    Batch numbers are case related data (and have now moved to the case page). 
-                </p>
-            </aside>
-        </div>
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-full">
+        <aside class="govuk-!-padding-3 govuk-!-margin-top-5 govuk-!-margin-bottom-9 opss-border-all opss-rounded-corners opss-drop-shadow">
+          <h3 class="govuk-heading-s govuk-!-margin-bottom-1 opss-secondary-text">
+            Batch numbers
+          </h3>
+            <p class="govuk-body-s govuk-!-margin-0 opss-secondary-text">
+              Batch numbers are case related data (and have now moved to the case page). 
+            </p>
+        </aside>
     </div>
+  </div> 
 
   <!--div class="govuk-form-group">
     <label class="govuk-label govuk-label--m" for="product_batch_number">Batch number</label>
@@ -573,13 +592,16 @@
     </div>
 
     <div class="govuk-grid-row">
-        <div class="govuk-grid-column-two-thirds">
-            <aside class="govuk-!-padding-4 govuk-!-margin-bottom-6 opss-border-all opss-rounded-corners" style>
-                <p class="govuk-body-s govuk-!-margin-0 opss-secondary-text">
-                  Customs codes are case related data (and have now moved to the case page).  
-                </p>
-            </aside>
-        </div>
+      <div class="govuk-grid-column-full">
+          <aside class="govuk-!-padding-3 govuk-!-margin-top-5 govuk-!-margin-bottom-9 opss-border-all opss-rounded-corners opss-drop-shadow">
+            <h3 class="govuk-heading-s govuk-!-margin-bottom-1 opss-secondary-text">
+              Customs codes
+            </h3>
+              <p class="govuk-body-s govuk-!-margin-0 opss-secondary-text">
+                Customs codes are case related data (and have now moved to the case page). 
+              </p>
+          </aside>
+      </div>
     </div>    
   
     <!--div class="govuk-form-group">
