updates to businesses page design

--- a/app/views/psd-revised-flow/businesses.html
+++ b/app/views/psd-revised-flow/businesses.html
@@ -143,20 +143,42 @@
                         86532488 <span class="govuk-!-font-size-16 govuk-!-padding-left-2 opss-secondary-text">Registration number for incorporated businesses</span>
                     </dd>
                 </div>
-                <div class="govuk-summary-list__row">
+                <div class="govuk-summary-list__row govuk-summary-list__row--no-border">
                     <dt class="govuk-summary-list__key">
-                        Address 1
+                        Location name
                     </dt>
                     <dd class="govuk-summary-list__value">
-                        72 Guild Street <br>London <br>SE23 6FH <br>United Kingdom  
-                        <span class="govuk-!-font-size-16 govuk-!-padding-left-2 opss-secondary-text">
-                            <span class="govuk-visually-hidden">: This is the</span> Registered office
-                        </span>
+                        The head office
                     </dd>
-                </div>
+                </div>                
                 <div class="govuk-summary-list__row">
                     <dt class="govuk-summary-list__key">
-                        Address 2
+                        Address
+                    </dt>
+                    <dd class="govuk-summary-list__value">
+                        <!--span class="govuk-!-display-block govuk-!-margin-bottom-3 govuk-!-font-size-16 xxxxxopss-secondary-text">
+                            <span class="govuk-!-font-weight-bold govuk-!-display-inline-block govuk-!-margin-right-2">Location name</span><span class="govuk-visually-hidden">:</span> The head office
+                        </span-->
+
+                        72 Guild Street <br>London <br>SE23 6FH <br>United Kingdom 
+                        
+                        
+                        <!--span class="govuk-!-font-size-16 govuk-!-padding-left-2 opss-secondary-text">
+                            <span class="govuk-visually-hidden">: This is the</span> Registered office
+                        </span-->
+                    </dd>
+                </div>
+                <div class="govuk-summary-list__row govuk-summary-list__row--no-border">
+                    <dt class="govuk-summary-list__key">
+                        Location name
+                    </dt>
+                    <dd class="govuk-summary-list__value">
+                        Main distribution centre
+                    </dd>
+                </div>                
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">
+                        Address
                     </dt>
                     <dd class="govuk-summary-list__value">
                         5 Liverpool road <br>Liverpool <br>L2 2BX
@@ -164,13 +186,17 @@
                 </div>
                 <div class="govuk-summary-list__row">
                     <dt class="govuk-summary-list__key">
-                        Contact 1
+                        Contact 
                     </dt>
                     <dd class="govuk-summary-list__value">
                         <!--p class="govuk-body">David Brown</p>
                         <p class="govuk-body">07700 900457</p>
                         <p class="govuk-body">sarah.phillips@example.com</p-->
                         <dl class="opss-nested-definition-list">
+                            <div>
+                                <dt>Position</dt>
+                                <dd>CEO</dd> 
+                            </div>                             
                             <div>
                                 <dt>Name</dt>
                                 <dd>Mr David Brown</dd>
@@ -183,19 +209,19 @@
                                 <dt>Email</dt>
                                 <dd>david.brown@example.com</dd> 
                             </div>
-                            <div>
-                                <dt>Position</dt>
-                                <dd>CEO</dd> 
-                            </div>                            
                         </dl>
                     </dd>
                 </div> 
                 <div class="govuk-summary-list__row">
                     <dt class="govuk-summary-list__key">
-                        Contact 2
+                        Contact 
                     </dt>
                     <dd class="govuk-summary-list__value">
                         <dl class="opss-nested-definition-list">
+                            <div>
+                                <dt>Position</dt>
+                                <dd>Sales manager</dd> 
+                            </div>
                             <div>
                                 <dt>Name</dt>
                                 <dd>Janet Smith</dd>
@@ -208,10 +234,6 @@
                                 <dt>Email</dt>
                                 <dd>janet.smith@example.com</dd> 
                             </div>
-                            <div>
-                                <dt>Position</dt>
-                                <dd>Sales manager</dd> 
-                            </div>                            
                         </dl>
                     </dd>
                 </div> 
@@ -224,14 +246,14 @@
                         <!-- *** this hyperlink goes direct to the full business page, but appends #attachments to the URL to open the tab *** -->
                     </dd>
                 </div>  
-                <div class="govuk-summary-list__row">
+                <!--div class="govuk-summary-list__row">
                     <dt class="govuk-summary-list__key">
                         Cases
                     </dt>
                     <dd class="govuk-summary-list__value">
                         Included in this 1 case
                     </dd>
-                </div>                                                             
+                </div-->                                                             
             </dl>
 
             <p class="govuk-body-s govuk-!-margin-bottom-0 opss-secondary-text opss-text-align-right">
@@ -295,15 +317,22 @@
                          
                     </dd>
                 </div>
+                <div class="govuk-summary-list__row govuk-summary-list__row--no-border">
+                    <dt class="govuk-summary-list__key">
+                        Location name
+                    </dt>
+                    <dd class="govuk-summary-list__value">
+                        Central office and warehouse
+                    </dd>
+                </div>                
                 <div class="govuk-summary-list__row">
                     <dt class="govuk-summary-list__key">
                         Address
                     </dt>
                     <dd class="govuk-summary-list__value">
+
                         72 Guild Street <br>London <br>SE23 6FH <br>United Kingdom  
-                        <span class="govuk-!-font-size-16 govuk-!-padding-left-2 opss-secondary-text">
-                            <span class="govuk-visually-hidden">: This is the</span> Registered office
-                        </span>
+
                     </dd>
                 </div>
                 <div class="govuk-summary-list__row">
@@ -312,6 +341,10 @@
                     </dt>
                     <dd class="govuk-summary-list__value">
                         <dl class="opss-nested-definition-list">
+                            <div>
+                                <dt>Position</dt>
+                                <dd></dd> 
+                            </div>
                             <div>
                                 <dt>Name</dt>
                                 <dd>Nigel Harrison</dd>
@@ -324,10 +357,6 @@
                                 <dt>Email</dt>
                                 <dd>chemistsRus@example.com</dd> 
                             </div>
-                            <div>
-                                <dt>Position</dt>
-                                <dd></dd> 
-                            </div>                            
                         </dl>
                     </dd>
                 </div> 
@@ -339,15 +368,16 @@
                         
                     </dd>
                 </div>
-                <div class="govuk-summary-list__row">
+                <!--div class="govuk-summary-list__row">
                     <dt class="govuk-summary-list__key">
                         Cases
                     </dt>
                     <dd class="govuk-summary-list__value">
+
                         <a href="#" class="govuk-link govuk-link--no-visited-state"><span class="govuk-visually-hidden">Chemists R Us is </span>Included in 3 cases</a>
-                        <!-- *** this hyperlink goes to the business pages but appends #cases to the end of the URL. Note: 'cases', plural *** -->
+
                     </dd>
-                </div>                                                                
+                </div-->                                                                
             </dl>
 
             <p class="govuk-body-s govuk-!-margin-bottom-0 opss-secondary-text opss-text-align-right">
