--- a/app/views/psd-revised-flow/inc_tab-attachments-x2.html
+++ b/app/views/psd-revised-flow/inc_tab-attachments-x2.html
@@ -1,7 +1,7 @@
 <ul class="govuk-list">
     <li>
 
-        <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt"><!--  opss-summary-list-mixed--sm-font -->
+        <dl class="govuk-summary-list govuk-!-padding-bottom-6 opss-summary-list-mixed opss-summary-list-mixed--narrow-dt"><!--  opss-summary-list-mixed--sm-font -->
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
                 Type
@@ -23,7 +23,7 @@
                     Added
                 </dt>
                 <dd class="govuk-summary-list__value">
-                    13 October 2021 
+                    13 October 2021  
                 </dd>
             </div>
         </dl>
@@ -31,7 +31,7 @@
     </li>
     <li>
 
-        <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt">
+        <dl class="govuk-summary-list govuk-!-padding-bottom-6 opss-summary-list-mixed opss-summary-list-mixed--narrow-dt">
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
                     Type
