businesses empty pg

--- a/app/views/psd-revised-flow/businesses-empty.html
+++ b/app/views/psd-revised-flow/businesses-empty.html
@@ -71,7 +71,7 @@
 
 
                 <p class="govuk-body opss-text-align-center">
-                   This case has not recorded the details of any businesses. 
+                   This case has not added any businesses. 
                 </p>
 
 
