--- a/app/views/psd-revised-flow/indexxx.html
+++ b/app/views/psd-revised-flow/indexxx.html
@@ -413,8 +413,8 @@
             </li>
 
             <li>
-                <a class="govuk-link govuk-link--no-visited-state ghost" href="/psd-revised-flow/#" target="_blank">Case page - Help</a>
-                <br><span class="govuk-!-font-size-16">A help page explaining how to create a case (with Help link appended to the bottom of the new case left nav)</span>.
+                <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/help.html" target="_blank">Case page - Help</a>
+                <br><span class="govuk-!-font-size-16">A help page explaining how the case and product pages have changed (and why). A link to this to be added to the case pages left nav and a 'block' inserted into the 'How to use the PSD' page: HTML examples to follow</span>.
             </li>            
 
         </ol>
