--- a/app/assets/sass/opss/_opss-psd.scss
+++ b/app/assets/sass/opss/_opss-psd.scss
@@ -111,7 +111,7 @@
     }
 
     .opss-panels__single {
-        width: 100%; 
+        /*width: 100%; */
         padding-bottom: govuk-spacing(2); 
         margin-top: - govuk-spacing(4);
         margin-bottom: govuk-spacing(2);
@@ -187,6 +187,17 @@ ul.opss-radio-list {
         display: block;
     }
 }
+
+/*.opss-list-squares {
+    list-style-type: square; 
+
+    ol &, 
+    ul & {
+        margin-left: govuk-spacing(6);
+        padding-top: govuk-spacing(4);
+        padding-bottom: govuk-spacing(1);
+    }
+}*/
 
 .govuk-character-count__message:after {
     content: '.';
