hlep page updates

--- a/app/views/psd-revised-flow/help.html
+++ b/app/views/psd-revised-flow/help.html
@@ -109,20 +109,20 @@
             <div class="govuk-details__text">
 
                 <ul class="govuk-list govuk-list--bullet govuk-list--spaced">
-                    <li>We want one product record (describing a product) to be used by all users creating a case about the same product</li>
+                    <li>We want the same product record (describing a specific product) to be used by all users creating a case about the <em>that</em> product</li>
                     <li>Because a product record only describes the product - and not information about a case - it can be reused in many different cases and cases which might be reporting different safety concerns</li>
                     <li>You may need to create your own version of a product record if an existing one doesn't fit your needs (or one doesn't already exist for your product)</li>
-                    <li>Because the same product record should be used by all users creating cases about the same product, it is important that editing is controlled: At any one time only one team can edit a product record - as the product record owner - but any team can ask the product record owner to add additional information if required</li>
+                    <li>Because the same product record should be used by all users creating cases about the same product, it is important that editing is controlled: At any one time only one team can edit a product record - as the product record owner - but any team can provide a product record owner with additional information to add to the product record</li>
                     <li>You can remove a product record from your case at any time and add a different one to your case if necessary</li>
                     <li>A team is only a product record owner while the product record is included in one of their open cases</li>
-                    <li>When a product record owner closes their case, the product record remains in the Product Safety Database as a seperate entry and has no owner. The next team to include it in their case or edit it will become the new product record owner.</li>
+                    <li>When a product record owner closes their case, the product record remains in the Product Safety Database as a seperate entry and has no owner. (A copy of the product record is saved with the closed case). The next team to include it in their case or edit it will become the new product record owner.</li>
                 </ul>
 
             </div>
         </details>  
         
         <h3 class="govuk-heading-s govuk-!-margin-top-6 govuk-!-margin-bottom-4">
-            We have made the cases and products pages easier to use and more useful
+            We have made the cases and products pages more useful and easier to use
         </h3>
 
         <ul class="govuk-list govuk-list--bullet govuk-list--spaced">
@@ -132,7 +132,8 @@
             <!--li>You now know if teams from across the country have already concluded investigations into the same product</li-->
             <li>You can now see the progress and results of all cases currently using the same product record in their investigations and the conclusions of all closed cases which included the product record</li>
             <li>You can contact other teams you now know to be investigating the same product. (Teams can add other teams to a case)</li>
-            <li>By using the same product records across different teams and cases nationally, there is greater transparency, and you are able to share information or even avoid duplicating work.</li>
+            <li>By using the same product records across different teams and cases nationally, there is greater transparency, and you are able to share information or even avoid duplicating work</li>
+            <li>There will be fewer duplications of product entries in the database and searching for products will be more decisive.</li>
         </ul>      
 
     </div>                
