--- a/app/views/psd-revised-flow/help.html
+++ b/app/views/psd-revised-flow/help.html
@@ -49,7 +49,7 @@
 
             <ol class="govuk-list govuk-list--number govuk-list--spaced">
                 <li><span class="govuk-!-font-weight-bold">Create your case</span> <span class="govuk-!-font-size-16 govuk-!-padding-left-2">&ndash;&nbsp;&nbsp;this is now quicker with fewer questions</span></li>
-                <li><span class="govuk-!-font-weight-bold">Add to the case the product your case is about</span>
+                <li><span class="govuk-!-font-weight-bold">Add the product to your case</span>
 
                     <ul class="govuk-list govuk-list--bullet govuk-list--spaced govuk-!-margin-top-4 govuk-!-margin-bottom-4 govuk-!-font-size-16">
                         <li>Check to see the product does not already exist in the database - if it does, use its <abbr>PSD</abbr> reference number to add the product record to your case</li>
